Fix bug where the collapsed comment stream avatars did not match the blended avatars in placement.

--- a/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
+++ b/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
@@ -695,7 +695,6 @@ object, embed, video, iframe {
                         box-shadow: none;
                         opacity: 0.5;
                         transition: none;
-                        min-height: 33px;
 
                         img.img-circle {
                             @include box-shadow(0 1px 3px 0 rgba(0, 0, 0, 0.36), 0 0 1px 0 rgba(0, 0, 0, 0.33) inset);
